--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 <header class="container text-center">
@@ -26,6 +26,7 @@
 
     <div id="recipeFinder" class="bg-light rounded-2 my-4 position-relative">
         <input type="text"
+               id="recipeFinderInput"
                class="w-100 bg-transparent border-0 p-3"
                aria-label="Rechercher une recette"
                placeholder="Rechercher une recette">
@@ -53,7 +54,7 @@
     <section class="row" id="recipes"></section>
 </main>
 
-<script type="module" src="./assets/js/main.js"></script>
+<script type="module" src="./js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
