--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
         <a class="btn btn-primary text-white btn-lg btn-block dropdown-toggle me-2" href="#">
             Ingredients
         </a>
+        <ul id="ingredientsOptions"></ul>
         <a class="btn btn-success text-white btn-lg btn-block dropdown-toggle me-2" href="#">
             Appareils
         </a>
+        <ul id="appliancesOptions"></ul>
         <a class="btn btn-danger text-white btn-lg btn-block dropdown-toggle me-2" href="#">
             Ustensiles
         </a>
+        <ul id="ustensilsOptions"></ul>
     </div>
 </header>
 
