filter html & style ok

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
             </svg>
         </div>
     </div>
-    <div>
-        
-    </div>
+    <div id="tagsContainer" class="d-flex flex-wrap"></div>
     <div id="sorter" class="d-flex justify-content-start my-4">
         <div class="position-relative d-inline-flex me-2">
             <button id="ingredientsButton" class="btn btn-lg btn-primary btn-block">
